fix issue when build and style issue on mobile

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,7 +2,23 @@
 .footer {
     line-height: $font-size-3;
     .footer-content {
-        @extend %full-width;
+        @media (min-width: $screen-sm-min) {
+            margin-left: -9999px;
+            margin-right: -9999px;
+            padding-left: 9999px;
+            padding-right: 9999px;
+        }
+        @media (max-width: $screen-xs-max) {
+            margin-left: -15px;
+            margin-right: -15px;
+            padding-left: 15px;
+            padding-right: 15px;
+
+            > .row {
+                margin: 0;
+            }
+        }
+        
         text-align: center;
         padding-top: 40px;
         padding-bottom: 60px;
