--- a/src/app/frontpage/frontpagewrapper.component.scss
+++ b/src/app/frontpage/frontpagewrapper.component.scss
@@ -1,3 +1,4 @@
+@import '../../scss/mixin.scss';
 .frontpage {
   .slideshow {
     background: url("../../assets/images/slide-plat.jpg") center no-repeat;
@@ -6,5 +7,9 @@
     margin-top: -20px;
     margin-left: -50%;
     margin-right: -50%;
+    @media (max-width: $screen-xs-max) {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
   }
 }
